--- a/src/components/css/Hero.scss
+++ b/src/components/css/Hero.scss
@@ -59,7 +59,7 @@
   color: white;
  
   letter-spacing: 3px;
-  font-size: 60px;
+  // font-size: 60px;
 }
 
 .heading-span-tag {
@@ -121,4 +121,5 @@
   background: -webkit-linear-gradient(#eee, #91e8ee);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  
 }
