--- a/src/components/css/Footer.scss
+++ b/src/components/css/Footer.scss
@@ -1,32 +1,23 @@
 #footer{
 	background: var(--bg-primary);
     padding: 3rem;
-	/* padding-top: 5rem; */
+
 	padding-top: 7rem;
     padding-bottom: 80px;
-	// background-image: url(https://arena.km.ua/wp-content/uploads/3538533.jpg);
+	
 }
 #footer2{
 	background: #f7f7f7;
     padding: 3rem;
     margin-top: 0px;
-	/* padding-top: 5rem; */
+
 	padding-top: 7rem;
     padding-bottom: 80px;
-	// background-image: url(../images/cards/v748-toon-111.png);
+	
 }
-.logo-footer{
-	/* max-width: 300px; */
-}
-.social-links{
-	/* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
 
-}
 .social-links h2{
-	padding-bottom: 15px;
+	// padding-bottom: 15px;
 	font-size: 20px;
     font-weight: 600;
 }
@@ -34,29 +25,22 @@
 	padding-bottom: 25px;
 }
 .social-icons{
-	/* display: flex;
-    gap: 3rem; */
+
 	display: flex;
     flex-direction: column;
     gap: 1rem;
 	color: #ffffff;
 }
 .social-icons a{
-	/* font-size: 18px; */
-    /* background: #ffffff; */
-    /* box-shadow: rgb(0 0 0 / 8%) 0px 4px 12px;
-    padding: 0.4rem 1rem 0.4rem 1rem;
-    border-radius: 3px;
-	color: #82074a; */
-	/* margin-right: 18px; */
+	
 	color: #ffffff;
 }
 .social-icons a:hover{
 	color: #d0c8c8;
 }
 .social-icons a i{
-	// box-shadow: rgb(0 0 0 / 8%) 0px 4px 12px;
-    padding: 0.4rem 1rem 0.4rem 1rem;
+
+    // padding: 0.4rem 1rem 0.4rem 1rem;
     border-radius: 3px;
     color: #ffffff;
 	font-size: 16px;
@@ -66,7 +50,7 @@ li{
 	list-style: none;
 }
 .useful-link h2{
-	padding-bottom: 15px;
+	// padding-bottom: 15px;
 	font-size: 20px;
     font-weight: 600;
 }
@@ -91,7 +75,7 @@ li{
 	color: #afa5a5;
 }
 .address h2{
-	padding-bottom: 15px;
+	// padding-bottom: 15px;
 	font-size: 20px;
     font-weight: 600;
 }
@@ -138,4 +122,3 @@ a{
   text-decoration:none;
 }
 
-/* footer section end */
