--- a/src/components/css/Footer.scss
+++ b/src/components/css/Footer.scss
@@ -109,8 +109,8 @@ li{
 		color: #ffffff;
 }
 .copy-right-sec{
-	padding: 1.8rem;
-    background: #1f1e1e;
+	padding: 1rem;
+    background: #101010;
     color: #ffffff;
     text-align: center;
 }
